<resources>
    <string name="app_name">HelloWorld</string>
    <string name="taskMessage1">Task1</string>
    <string name="taskMessage2">Task2</string>
    <string name="taskMessage3">Task3</string>
    <string name="taskMessage4">Task4</string>
    <string name="taskMessage5">Task5</string>
    <string name="message1">Этот текст изначально был наверху</string>
    <string name="message2">Этот текст изначально был внизу</string>
    <string name="backMessage">Back</string>
    <string name="swapMessage">Swap</string>
    <string name="task3ButtonMessage">Покажи, что за дверью!</string>
    <string name="imgMessage">Дверка. Красная.</string>
    <string name="imgPathStandard">https://img.pngio.com/red-door-png-5-png-image-red-door-png-1722_3568.png</string>
    <string name="advice">URL of a picture</string>
    <string name="meme1">Проходи, не задерживайся!</string>
    <string name="meme2">Иди своей дорогой, сталкер.</string>
    <string name="meme3">Фильмография Тарковского</string>
    <string name="title">Титл</string>
    <string name="description">Дескриптион</string>
    <string name="title_activity_task5">Task5Activity</string>
    <string name="task5_game_choice0">Во что сегодня играем?</string>
    <string name="task5_game_choice1">Шахматы</string>
    <string name="task5_game_choice3">Нарды</string>
    <string name="task5_game_choice4">Шоги</string>
    <string name="nav1_message">Мы играем в шахматы</string>
    <string name="nav3_message">Мы играем в нарды</string>
    <string name="nav4_message">Мы играем в шоги</string>
    <string name="game_end">Мы доиграли!</string>
    <string name="home">Главное меню</string>
    <string name="library">Библиотека игр</string>
    <string name="settings">Настройки</string>
    <string name="settings_goto_nav0_button_message">Вернуться обратно в библиотеку игр</string>
    <string name="settings_text_message">Настройки (пока пустые)</string>
    <string name="taskMessage6">Task6</string>
    <string name="login">Вход в систему</string>
    <string name="user">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="goto_account">Войти</string>
    <string name="grettings_speech_text">Доброго дня,</string>
    <string name="exit_account">Выйти из системы</string>
    <string name="registration_message">Регистрация</string>
    <string name="password_confirm">Подтвердите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="task6_first_message">Далее могут пройти только зарегистрированные пользователи</string>
    <string name="loginButton">Войти</string>
    <string name="registrationButton">Зарегистрироваться</string>
</resources>
